--- a/paragraph-generator-project/src/index.css
+++ b/paragraph-generator-project/src/index.css
@@ -363,15 +363,22 @@ input {
 
 .lorem-text {
   display: grid;
-  justify-content: center;
+  justify-items: center;
   color: var(--primary-900);
+  /* border: 2px solid #000; */
 }
 
-.lorem-text p span {
+.lorem-text span {
   color: red;
+  letter-spacing: var(--letterSpacing);
 }
 
 @media screen and (min-width: 768px) {
+  p {
+    max-width: 80%;
+    /* border: 2px solid red; */
+  }
+
   label {
     font-size: 1.25rem;
   }
